--- a/index.html
+++ b/index.html
@@ -1,22 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Especificidad</title>
-    <link rel="stylesheet" href="./custom.css" />
-    <link rel="stylesheet" href="./index.css" />
-  </head>
-  <body>
-    <div class="contenedor">
-      <h2 class="titulo">Título</h2>
-      <p class="texto">
-        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Tempora
-        delectus vel, officiis sit excepturi cumque error quo enim numquam
-        laboriosam reiciendis sint beatae tempore tenetur in, eius ex laudantium
-        maiores.
-      </p>
-    </div>
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Especificidad</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="./custom.css" />
+  <link rel="stylesheet" href="./index.css" />
+</head>
+
+<body>
+  <div class="contenedor">
+    <h2 class="titulo">Título</h2>
+    <p class="texto">
+      Lorem ipsum dolor sit amet consectetur, adipisicing elit. Tempora
+      delectus vel, officiis sit excepturi cumque error quo enim numquam
+      laboriosam reiciendis sint beatae tempore tenetur in, eius ex laudantium
+      maiores.
+    </p>
+  </div>
+</body>
+
 </html>
